<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_input_background"
    tools:context=".ui.main.inputFragment.InputFragment">

    <TextView
        android:id="@+id/messageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/messageHeader"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/messageInputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageTV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/input_hint"
        android:inputType="textMultiLine"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/atTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageInputET"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/placeHeader"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/placeInputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/atTV"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/mapBtn"
        android:hint="@string/input_remind_me_at"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeInputET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/input_submit"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/mapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/atTV"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        app:srcCompat="@drawable/ic_map_button" />


</RelativeLayout>